unpackaged/main/default/objects/Whatsapp_Request__c/Whatsapp_Request__c.object-meta.xml
<CustomObject>
    <label>Whatsapp Request</label>
    <nameField>
        <displayFormat>WR-{00000}</displayFormat>
        <label>Whatsapp Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Whatsapp Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>