unpackaged/main/default/objects/Whatsapp_Request__c/fields/GUID__c.field-meta.xml
<CustomField>
    <fullName>GUID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GUID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>