unpackaged/main/default/objects/Whatsapp_Request__c/fields/Primary_PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>Primary_PhoneNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary PhoneNumber</label>
    <type>Phone</type>
</CustomField>