unpackaged/main/default/objects/Whatsapp_Request__c/fields/Use_Bus__c.field-meta.xml
<CustomField>
    <fullName>Use_Bus__c</fullName>
    <label>Use Bus?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>