unpackaged/main/default/objects/Whatsapp_Request__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>